--- a/Thanh_Toan.html
+++ b/Thanh_Toan.html
@@ -30,27 +30,13 @@
         </tr>
     </table>
 
-    <table border="1">
+    <table border="1" id="cong-viec">
         <tr>
             <th>Tên công việc</th>
             <th>Đơn giá</th>
             <th>Chức năng</th>
         </tr>
-        <tr>
-            <td>Thay nhớt</td>
-            <td class="don-gia">200000</td>
-            <td><button class="del">Xóa</button></td>
-        </tr>
-        <tr>
-            <td>Thay thắng</td>
-            <td class="don-gia">200000</td>
-            <td><button class="del">Xóa</button></td>
-        </tr>
-        <tr>
-            <td>Kiểm tra vỏ</td>
-            <td class="don-gia">100000</td>
-            <td><button class="del">Xóa</button></td>
-        </tr>
+        
     </table>
     <br>
     <button id="btn-thanh-toan">Thanh toán</button>
