--- a/Them_Khach_Hang.html
+++ b/Them_Khach_Hang.html
@@ -5,50 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="Them_Khach_Hang.js"></script>
     <title>Document</title>
 </head>
 
 <body>
     <h3>Thêm khách hàng</h3>
-    <table>
-        <tr>
-            <td>
-                <label for="ma">Mã khách hàng</label>
-            </td>
-            <td>
-                <input id="ma" type="text" placeholder="KH01"> <br>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <label for="ten">Họ và tên khách hàng</label>
 
-            </td>
-            <td>
-                <input id="ten" type="text" placeholder="Trần Anh Hùng">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <label for="dc">Địa chỉ</label>
-            </td>
-            <td>
-                <input id="dc" type="text" placeholder="ABC">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <label for="dt">Điện thoại</label>
-            </td>
-            <td>
-                <input id="dt" type="tel" placeholder="09xxxxxxxx">
-            </td>
-        </tr>
-    </table>
+    <form action="Them_Khach_Hang.php" method="post">
+        <table>
+            <tr>
+                <td>
+                    <label for="ma">Mã khách hàng</label>
+                </td>
+                <td>
+                    <input name="ma" type="text" placeholder="KH01"> <br>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="ten">Họ và tên khách hàng</label>
 
-    <button id="btn-them-kh">Thêm</button>
+                </td>
+                <td>
+                    <input name="ten" type="text" placeholder="Trần Anh Hùng">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="dc">Địa chỉ</label>
+                </td>
+                <td>
+                    <input name="dc" type="text" placeholder="ABC">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="dt">Điện thoại</label>
+                </td>
+                <td>
+                    <input id="dt" name="dt"d type="tel" placeholder="09xxxxxxxx">
+                </td>
+            </tr>
+        </table>
+        <input type="submit" id="btn-them-kh">
+    </form>
 </body>
 
 </html>
